# Opengl-IC

./: App.cpp  CMakeLists.txt  Framebuffer.h  OpenGLAPI.hpp  README.md  Shader.h  ShaderToy.hpp  Textura.cpp  Texture.h  Vertex.h  VertexArray.h  VertexObj.h  glad.c
Shaders/: BufferA.fs  BufferB.fs  BufferC.fs  FragmentShader.fs  FragmentShader3.fs  Texture.fs  VertexShader.vs  common.fs  draw.fs  draw.vs  image.fs  view.fs
